05_gitea/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gitea-service
  namespace: test-namespace
spec:
  selector:
    app: gitea
  ports:
  - name: gitea-http
    port: 3000
    targetPort: 3000
  - name: gitea-ssh
    port: 22
    targetPort: 22
